--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,13 +22,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         id: run1
-        run: echo Hello, world! && exit 1
+        run: exit 1
       - name: failure
         if:  ${{ steps.run1.conclusion == 'failure' }}
         run: echo "Workflow Failed"
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
