--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -33,8 +33,12 @@ jobs:
           format: 'json'
           exit-code: '1'
           ignore-unfixed: true
-          vuln-type: 'os,library'
+          vuln-type: 'os'
           severity: 'CRITICAL,HIGH'
+          security-checks: vuln
+          scan-ref: .
+          list-all-pkgs: false
+          output: trivy-result.json
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
