--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -40,6 +40,12 @@ jobs:
           list-all-pkgs: false
           output: trivy-result.json
 
+      - name: upload
+        uses: actions/upload-artifact@v3
+        with:
+          name: trivy-report
+          path: trivy-results.json
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
