--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@9ab158e8597f3b310480b9a69402b419bc03dbd5
+        uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'docker.io/nginx'
           format: 'json'
