--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: trivy-report
-          path: trivy-results.json
+          path: trivy-result.json
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
