--- a/.github/workflows/blank4.yml
+++ b/.github/workflows/blank4.yml
@@ -31,5 +31,5 @@ jobs:
     - name: Download Artifact
       uses: actions/download-artifact@v2
       with:
-        name: my-artifact-download
+        name: my-artifact
         path: hello.txt
