--- a/.github/workflows/blank4.yml
+++ b/.github/workflows/blank4.yml
@@ -32,4 +32,4 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: my-artifact
-        path: hello.txt
+        path: /tmp/
