--- a/.github/workflows/blank4.yml
+++ b/.github/workflows/blank4.yml
@@ -32,4 +32,4 @@ jobs:
       uses: actions/download-artifact@eaceaf801fd36c7dee90939fad912460b18a1ffe
       with:
         name: my-artifact
-        path: ./
+        path: hello.txt
