--- a/.github/workflows/blank4.yml
+++ b/.github/workflows/blank4.yml
@@ -29,7 +29,7 @@ jobs:
 
     steps:
     - name: Download Artifact
-      uses: actions/download-artifact@eaceaf801fd36c7dee90939fad912460b18a1ffe
+      uses: actions/download-artifact@v4.1.6
       with:
         name: my-artifact
         path: hello.txt
